八田さんの反映（メニュー）
メニューをスクロールすると隠し、上にスクロールで出てくる。

--- a/style.css
+++ b/style.css
@@ -597,7 +597,13 @@ nav {
     width: 200px;
 }
 
-
+.hide {
+    transform: translateY(-100%);
+    transition: .5s;
+}
+#navbar {
+    transition: .5s;
+}
 /* -------------------------------------------------------------------------------- */
 /*	7.	Button
 /* -------------------------------------------------------------------------------- */
