--- a/responsive.css
+++ b/responsive.css
@@ -238,9 +238,11 @@
     }
 }
 
-@media screen and (min-width: 992px) and (max-width: 1199.98px) {}
+@media screen and (min-width: 992px) and (max-width: 1199.98px) {
+}
 
-@media screen and (min-width:1200px) {}
+@media screen and (min-width:1200px) {
+}
 
 /* -------------------------------------------------------------------------------- */
 /*	6. Button
