--- a/style.css
+++ b/style.css
@@ -1326,11 +1326,36 @@ dd.con:after {
     font-weight: 600;
 }
 .z-crosssection-img {
-    width: 600px;
+    width: 900px;
     height: auto;
+}
+.z-card {
+    margin: 0 auto;
+    padding: 35px;
+    margin-bottom: 60px;
+}
+.z-card-title {
+    font-weight: 600;
+    padding-left: 10px;
+}
+.z-card-text {
+    font-size: 18px;
+    padding-top: 30px;
+    padding-left: 10px;
+    line-height: 1.7;
+}
+.pt30 {
+    padding-top: 30px;
+}
+.pb10 {
+    padding-bottom: 10px;
 }
 .pb40 {
     padding-bottom: 40px;
+}
+.py80 {
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 /* -------------------------------------------------------------------------------- */
 /*	10.	Single Page
@@ -1459,11 +1484,17 @@ a:hover.white {
 .bg-lightbrown {
     background-color: #faf7f1;
 }
+.bg-brown {
+    background-color: #f2eade;
+}
 .text-brown {
     color: #B28B63;
 }
 .text-darkbrown {
     color: #51422c;
+}
+.text-lightgreen {
+    color: #70ad55;
 }
 /* -------------------------------------------------------------------------------- */
 /*	15.	Margin/Padding
