--- a/responsive.css
+++ b/responsive.css
@@ -308,6 +308,12 @@
     .z-card-title {
         font-size: 16px;
     }
+    .z-img1 {
+        padding-top: 10px !important;
+    }
+    .z-img2 {
+        padding-bottom: 0 !important;
+    }
     .z-card-text {
         font-size: 12px;
     }
@@ -331,6 +337,12 @@
     .z-card-title {
         font-size: 16px;
     }
+    .z-img1 {
+        padding-top: 10px !important;
+    }
+    .z-img2 {
+        padding-bottom: 0 !important;
+    }
     .z-card-text {
         font-size: 12px;
     }
@@ -344,8 +356,17 @@
     .nrhd-time {
         margin-top: 10px;
     }
+    .z-card-title {
+        font-size: 1.4rem;
+    }
+    .z-card {
+        padding: 20px;
+    }
+    .z-img1 {
+        padding-top: 20px !important;
+    }
     .z-text {
-        font-size: 20px;
+        font-size: 1rem;
     }
 }
 
@@ -353,9 +374,16 @@
     .nrhd-time {
         margin-top: 50px;
     }
+    .z-img1 {
+        padding-top: 25px !important;
+    }
 }
 
-@media screen and (min-width:1200px) {}
+@media screen and (min-width:1200px) {
+    .z-img1 {
+        padding-top: 25px !important;
+    }
+}
 
 /* -------------------------------------------------------------------------------- */
 /*	9. Single Page
