--- a/style.css
+++ b/style.css
@@ -1346,20 +1346,23 @@ dd.con:after {
 .z-btn {
     font-size: 1.4rem;
     color: #fff;
-    background-color: #373841;
+    background-color: rgba(0, 0, 0, .4);;
     padding: 20px 55px;
-    transition: .3s;
+    transition: .1s;
 }
 .z-btn:hover {
     color: #fff;
-    opacity: .6;
-    transition: .3s;
+    background-color: rgba(255, 117, 10, 0.8);
+    transition: .1s;
 }
 .pt30 {
     padding-top: 30px;
 }
 .pb10 {
     padding-bottom: 10px;
+}
+.pb25 {
+    padding-bottom: 25px;
 }
 .pb40 {
     padding-bottom: 40px;
