--- a/responsive.css
+++ b/responsive.css
@@ -356,6 +356,10 @@
     .nrhd-time {
         margin-top: 10px;
     }
+    .z-title {
+        margin-top: 0;
+        padding: 30px 50px;
+    }
     .z-card-title {
         font-size: 1.4rem;
     }
@@ -366,7 +370,7 @@
         padding-top: 20px !important;
     }
     .z-text {
-        font-size: 1rem;
+        font-size: 20px;
     }
 }
 
