--- a/style.css
+++ b/style.css
@@ -1438,6 +1438,16 @@ dd.con:after {
     margin-bottom: 10px;
 }
 
+.arrow {
+    width: 50px;
+    height: 50px;
+    border: 10px solid;
+    border-color: transparent transparent #000 #000;
+    transform: rotate(-45deg);
+    position: absolute;
+    top: 700px;
+    left: 48%;
+}
 /* -------------------------------------------------------------------------------- */
 /*	11.	Blog
 /* -------------------------------------------------------------------------------- */
