--- a/style.css
+++ b/style.css
@@ -1355,6 +1355,34 @@ dd.con:after {
     background-color: rgba(255, 117, 10, 0.8);
     transition: .1s;
 }
+.ll-container {
+    padding-left: 80px;
+    padding-right: 80px;
+}
+.ll-title {
+    padding: 80px 0;
+}
+.line15 {
+    line-height: 1.5;
+    letter-spacing: .08em;
+}
+.llbtn-box {
+    margin: 80px 0;
+}
+.llbtn {
+    color: #fff;
+    font-weight: 600;
+    padding: 20px 60px;
+    border: 2px solid #17a2b8;
+    background-color: #17a2b8;
+    transition: .3s;
+}
+.llbtn:hover {
+    color: #17a2b8;
+    background-color: #fff;
+    text-decoration: none;
+    transition: .3s;
+}
 .pt30 {
     padding-top: 30px;
 }
