--- a/responsive.css
+++ b/responsive.css
@@ -95,6 +95,12 @@
 /* -------------------------------------------------------------------------------- */
 
 @media screen and (max-width: 575.98px) {
+    .tel-i {
+        position: relative;
+        left: 0.5em;
+        bottom: 3px;
+    }
+    
     .navbar-brand {
         width: 180px;
     }
@@ -149,6 +155,12 @@
 }
 
 @media screen and (min-width: 576px) and (max-width: 767.98px) {
+    .tel-i {
+        position: relative;
+        left: 0.5em;
+        bottom: 3px;
+    }
+    
     .navbar-brand {
         width: 230px;
     }
@@ -202,6 +214,12 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 991.98px) {
+    .tel-i {
+        position: relative;
+        left: 0.5em;
+        bottom: 3px;
+    }
+    
     .logo-img {
         width: 250px;
     }
@@ -392,6 +410,33 @@
 /* -------------------------------------------------------------------------------- */
 /*	9. Single Page
 /* -------------------------------------------------------------------------------- */
+@media screen and (min-width: 2000px) {
+    .arrow {
+        top: 1700px;
+        left: 50%;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .arrow {
+        top: 50vh;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .arrow {
+        top: calc(100vh / 50 * 30);
+    }
+}
+@media screen and (max-width: 580px) {
+    .arrow{
+        width: 25px;
+        height: 25px;
+        border: 5px solid;
+        border-color: transparent transparent #000 #000;
+        top: calc(100vh / 50 * 26);
+    }
+}
 
 
 /* -------------------------------------------------------------------------------- */
