TOPページZ空調リンク

--- a/responsive.css
+++ b/responsive.css
@@ -254,6 +254,23 @@
 /* -------------------------------------------------------------------------------- */
 /*	7. Top Page
 /* -------------------------------------------------------------------------------- */
+@media screen and (max-width: 575.98px) {
+	.top-img2-pc {
+		display: none;
+	}
+
+	.top-img2-res {
+		display: block;
+		width: 100%;
+	}
+
+	.top-zkuchou-res {
+		display: block;
+		padding-top: 30px;
+		margin: 0 auto;
+		width: 50%;
+	}
+}
 
 /* -------------------------------------------------------------------------------- */
 /*	8. Archive Page
