--- a/style.css
+++ b/style.css
@@ -1355,17 +1355,26 @@ dd.con:after {
     padding-left: 10px;
     line-height: 1.7;
 }
+.btn-box {
+    padding-bottom: 100px;
+}
 .z-btn {
     font-size: 1.4rem;
     color: #fff;
-    background-color: rgba(0, 0, 0, .4);;
+    background-color: #888;
     padding: 20px 55px;
     transition: .1s;
 }
 .z-btn:hover {
     color: #fff;
-    background-color: rgba(255, 117, 10, 0.8);
+    background-color: rgba(255, 117, 10, 1);
     transition: .1s;
+}
+.z-btn:focus {
+	outline:0;
+}
+.summer {
+    margin-bottom: 4rem;
 }
 .ll-container {
     padding-left: 80px;
