メニュー部分変更
menu-item-has-children疑似クラスにFontAwesomeアイコンを付ける

--- a/responsive.css
+++ b/responsive.css
@@ -140,6 +140,13 @@
     .clicked .global_menu .menu-item {
         left: 0;
     }
+    
+    .menu-item-has-children::before {
+        font-family: "Font Awesome 5 Free";
+        content: "\f055";
+        margin-right: 5px;
+        font-weight: bold;
+    }
 
     .sub-menu {
         position: relative;
@@ -197,6 +204,13 @@
         width: 100%;
         transition: all 0.8s
     }
+    
+    .menu-item-has-children::before {
+        font-family: "Font Awesome 5 Free";
+        content: "\f055";
+        margin-right: 5px;
+        font-weight: bold;
+    }
 
     .sub-menu {
         position: relative;
@@ -241,6 +255,12 @@
         display: block;
         width: 100%;
         transition: all 0.8s
+    }
+    .menu-item-has-children::before {
+        font-family: "Font Awesome 5 Free";
+        content: "\f055";
+        margin-right: 5px;
+        font-weight: bold;
     }
 
     .sub-menu {
