--- a/responsive.css
+++ b/responsive.css
@@ -100,7 +100,7 @@
         left: 0.5em;
         bottom: 3px;
     }
-    
+
     .navbar-brand {
         width: 180px;
     }
@@ -122,10 +122,10 @@
         margin-top: 0.75rem;
     }
 
-	.global_nav {
-		display:none;
-	}
-    
+    .global_nav {
+        display: none;
+    }
+
     .menu_wrapper {
         height: 0;
         margin-top: 10px;
@@ -136,9 +136,18 @@
         width: 100%;
         transition: all 0.8s;
     }
-    
+
     .clicked .global_menu .menu-item {
         left: 0;
+    }
+
+    .global_menu > .menu-item:first-of-type,
+    .footer_menu > .menu-item:first-of-type {
+        background-color: rgba(255, 117, 10, 1);
+    }
+
+    .menu-item {
+        background-color: rgba(51, 51, 51, 1);
     }
 
     .sub-menu {
@@ -162,7 +171,7 @@
         left: 0.5em;
         bottom: 3px;
     }
-    
+
     .navbar-brand {
         width: 230px;
     }
@@ -178,20 +187,21 @@
     .yamm-content {
         text-align: center;
     }
-    
+
     .ham {
         margin-top: 0.75rem;
         float: left;
     }
 
-	.global_nav {
-		display:none;
-	}
+    .global_nav {
+        display: none;
+    }
 
     .menu_wrapper {
         margin-top: 10px;
         height: 0;
     }
+
     .global_menu .menu-item {
         display: block;
         width: 100%;
@@ -219,7 +229,7 @@
         left: 0.5em;
         bottom: 3px;
     }
-    
+
     .logo-img {
         width: 250px;
     }
@@ -233,9 +243,9 @@
         height: 1rem;
     }
 
-	.global_nav {
-		display:none;
-	}
+    .global_nav {
+        display: none;
+    }
 
     .global_menu .menu-item {
         display: block;
@@ -256,11 +266,9 @@
     }
 }
 
-@media screen and (min-width: 992px) and (max-width: 1199.98px) {
-}
+@media screen and (min-width: 992px) and (max-width: 1199.98px) {}
 
-@media screen and (min-width:1200px) {
-}
+@media screen and (min-width:1200px) {}
 
 /* -------------------------------------------------------------------------------- */
 /*	6. Button
@@ -271,21 +279,21 @@
 /*	7. Top Page
 /* -------------------------------------------------------------------------------- */
 @media screen and (max-width: 575.98px) {
-	.top-img2-pc {
-		display: none;
-	}
+    .top-img2-pc {
+        display: none;
+    }
 
-	.top-img2-res {
-		display: block;
-		width: 100%;
-	}
+    .top-img2-res {
+        display: block;
+        width: 100%;
+    }
 
-	.top-zkuchou-res {
-		display: block;
-		padding-top: 30px;
-		margin: 0 auto;
-		width: 50%;
-	}
+    .top-zkuchou-res {
+        display: block;
+        padding-top: 30px;
+        margin: 0 auto;
+        width: 50%;
+    }
 }
 
 /* -------------------------------------------------------------------------------- */
@@ -328,157 +336,201 @@
     .news-box-img {
         margin-bottom: 10px;
     }
+
     .z-text {
         font-size: 18px;
     }
+
     .z-title {
         font-size: 24px;
         padding: 20px 30px;
     }
+
     .z-card {
         padding: 10px;
     }
+
     .z-card-title {
         font-size: 16px;
     }
+
     .summer {
         margin-bottom: 0;
     }
+
     .z-img1 {
         padding-top: 10px !important;
     }
+
     .z-img2 {
         padding-bottom: 0 !important;
     }
+
     .z-card-text {
         font-size: 12px;
     }
+
     .z-btn {
         font-size: 1rem;
         padding: 20px 30px;
     }
+
     .ll-container {
         padding-left: 0;
         padding-right: 0;
     }
-	.adop-titlebox h3 {
-		font-size: 22px;
-	}
-	.adop-textbox h4 {
-		font-size: 20px;
-	}
-	.table-bordered td,.entry-box th {
-		display: block;
-	}
-	.entry-box th {
-		width: 100%;
-	}
-	.table-box th {
-		display: block;
-		width: 100%;
-	}
-	.adop-top {
-		margin-top: 50px !important;
-	}
+
+    .adop-titlebox h3 {
+        font-size: 22px;
+    }
+
+    .adop-textbox h4 {
+        font-size: 20px;
+    }
+
+    .table-bordered td,
+    .entry-box th {
+        display: block;
+    }
+
+    .entry-box th {
+        width: 100%;
+    }
+
+    .table-box th {
+        display: block;
+        width: 100%;
+    }
+
+    .adop-top {
+        margin-top: 50px !important;
+    }
 }
 
 @media screen and (min-width: 576px) and (max-width: 767.98px) {
     .z-text {
         font-size: 18px;
     }
+
     .z-title {
         font-size: 24px;
         padding: 20px 30px;
     }
+
     .z-card {
         padding: 10px;
     }
+
     .z-card-title {
         font-size: 16px;
     }
+
     .summer {
         margin-bottom: 0;
     }
+
     .z-img1 {
         padding-top: 10px !important;
     }
+
     .z-img2 {
         padding-bottom: 0 !important;
     }
+
     .z-card-text {
         font-size: 12px;
     }
+
     .z-btn {
         font-size: 1rem;
         padding: 20px 30px;
     }
+
     .ll-container {
         padding-left: 0;
         padding-right: 0;
     }
-	.adop-titlebox h3 {
-		font-size: 22px;
-	}
-	.adop-textbox h4 {
-		font-size: 20px;
-	}
-	.table-bordered td,.entry-box th {
-		display: block;
-	}
-	.entry-box th {
-		width: 100%;
-	}
-	.table-box th {
-		display: block;
-		width: 100%;
-	}
-	.adop-top {
-		margin-top: 50px !important;
-	}
+
+    .adop-titlebox h3 {
+        font-size: 22px;
+    }
+
+    .adop-textbox h4 {
+        font-size: 20px;
+    }
+
+    .table-bordered td,
+    .entry-box th {
+        display: block;
+    }
+
+    .entry-box th {
+        width: 100%;
+    }
+
+    .table-box th {
+        display: block;
+        width: 100%;
+    }
+
+    .adop-top {
+        margin-top: 50px !important;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991.98px) {
     .nrhd-time {
         margin-top: 10px;
     }
+
     .z-title {
         margin-top: 0;
         padding: 30px 50px;
     }
+
     .z-card-title {
         font-size: 1.4rem;
     }
+
     .z-card {
         padding: 20px;
     }
+
     .z-img1 {
         padding-top: 20px !important;
     }
+
     .z-text {
         font-size: 20px;
     }
+
     .ll-container {
         padding-left: 40px;
         padding-right: 40px;
     }
-	.adop-titlebox h3 {
-		font-size: 22px;
-	}
-	.adop-textbox h4 {
-		font-size: 20px;
-	}
-	.adop-top {
-		margin-top: 50px !important;
-	}
+
+    .adop-titlebox h3 {
+        font-size: 22px;
+    }
+
+    .adop-textbox h4 {
+        font-size: 20px;
+    }
+
+    .adop-top {
+        margin-top: 50px !important;
+    }
 }
 
 @media screen and (min-width: 992px) and (max-width: 1199.98px) {
     .nrhd-time {
         margin-top: 50px;
     }
+
     .z-img1 {
         padding-top: 25px !important;
     }
+
     .ll-container {
         padding-left: 40px;
         padding-right: 40px;
@@ -512,8 +564,9 @@
         top: calc(100vh / 50 * 30);
     }
 }
+
 @media screen and (max-width: 580px) {
-    .arrow{
+    .arrow {
         width: 25px;
         height: 25px;
         border: 5px solid;
