--- a/style.css
+++ b/style.css
@@ -1367,7 +1367,7 @@ dd.con:after {
     cursor: hand;
 }
 .z-bg2 {
-    background-color: #888;
+    background-color: rgba(255, 117, 10, 1);
 }
 .z-btn {
     font-size: 1.4rem;
@@ -1377,7 +1377,7 @@ dd.con:after {
 }
 .z-btn:hover {
     color: #fff;
-    background-color: rgba(255, 117, 10, 1);
+    background-color: rgb(0, 155, 90);
     transition: .1s;
 }
 .z-btn:focus {
