--- a/style.css
+++ b/style.css
@@ -1582,6 +1582,12 @@ div.wpcf7 input.wpcf7-submit:hover {
     top: 138vh;
     left: 48%;
 }
+
+.news_video iframe {
+    width: 992px;
+    height: 558px;
+}
+
 /* -------------------------------------------------------------------------------- */
 /*	11.	Blog
 /* -------------------------------------------------------------------------------- */
