長期優良住宅ページ作業

--- a/responsive.css
+++ b/responsive.css
@@ -613,6 +613,11 @@
     .z-img1 {
         padding-top: 25px !important;
     }
+    .bg-lhtop {
+        height: 180px;
+        background-position: right;
+        background-size: cover;
+    }
 }
 
 /* -------------------------------------------------------------------------------- */
