--- a/style.css
+++ b/style.css
@@ -1436,10 +1436,13 @@ div.wpcf7 input.wpcf7-submit:hover {
     line-height: 1.7;
 }
 .lh-box h2 {
-    color: #67bcc9;
+    color: #595757;
     font-weight: bold;
     font-size: 24px;
     letter-spacing: 0.2em;
+}
+.text-lb {
+    color: #67bcc9 !important;
 }
 .bg-lhtop {
     height: 160px;
@@ -1502,6 +1505,9 @@ div.wpcf7 input.wpcf7-submit:hover {
 }
 .pt8 {
     padding-top: 8rem;
+}
+.ls53 {
+    letter-spacing: 0.53em;
 }
 /* -------------------------------------------------------------------------------- */
 /*	10.	Single Page
