本番環境反映時の修正
メニューで隠れるのでTOP余白追加。
ボタンのURL設定。
２頁目の戻るリンク追加。

--- a/style.css
+++ b/style.css
@@ -1629,6 +1629,10 @@ div.wpcf7 input.wpcf7-submit:hover {
     height: 558px;
 }
 
+.lh-row {
+	padding-top: 160px;
+}
+
 /* -------------------------------------------------------------------------------- */
 /*	11.	Blog
 /* -------------------------------------------------------------------------------- */
