--- a/style.css
+++ b/style.css
@@ -425,12 +425,20 @@ img {
     margin-top: -110px;
 }
 
+.f-header {
+    padding: 10px 0;
+}
+
 /* -------------------------------------------------------------------------------- */
 /*	6.	Menu Navigation
 /* -------------------------------------------------------------------------------- */
 .logo,
 nav {
     z-index: 1000;
+}
+
+.logo-img {
+    max-width: 300px;
 }
 
 .navbar {
@@ -711,7 +719,7 @@ nav {
 
 .bg-test a {
     position: absolute;
-    z-index: 9999;
+    z-index: 990;
     top: 0;
     left: 0;
     width: 100%;
@@ -746,7 +754,7 @@ nav {
 }
 
 .bg-mask h5 {
-    z-index: 999;
+    z-index: 990;
     position: absolute;
     top: 50%;
     left: 50%;
