--- a/responsive.css
+++ b/responsive.css
@@ -114,7 +114,7 @@
     nav {
         position: fixed;
         width: 100%;
-        top: 2.5em;
+        top: 5px;
     }
     .logo-img {
         max-width: 250px;
@@ -198,7 +198,7 @@
     nav {
         position: fixed;
         width: 100%;
-        top: 4em;
+        top: 15px;
     }
 
     .navbar-brand {
@@ -305,7 +305,7 @@
     nav {
         position: fixed;
         width: 100%;
-        top: 4em;
+        top: 20px;
     }
     .global_nav {
         display: none;
