ヘッダー調整

--- a/style.css
+++ b/style.css
@@ -427,6 +427,7 @@ img {
 
 .f-header {
     padding: 10px 0;
+    transition: .5s;
 }
 
 /* -------------------------------------------------------------------------------- */
