--- a/responsive.css
+++ b/responsive.css
@@ -126,12 +126,12 @@
 
     .ham {
         float: left;
-        margin-top: 0.75rem;
+        margin-top: 0.2rem;
     }
 
     .global_nav {
         display: none;
-        margin-top: 5em;
+        margin-top: 50px;
         overflow-y: scroll;
     }
 
@@ -139,62 +139,98 @@
         height: 0;
         margin-top: 10px;
     }
+    
+    .global_menu {
+        background-color: #fff;
+    }
 
     .global_menu .menu-item {
         display: block;
         width: 100%;
         transition: all 0.8s;
     }
-
     .clicked .global_menu .menu-item {
-        left: 0;
+        text-align: left;
     }
-
     .global_menu > .menu-item:first-of-type,
     .footer_menu > .menu-item:first-of-type {
-        background-color: rgba(255, 117, 10, 1);
+        background-color: #58A4B0;        
     }
-
+    .global_menu > .menu-item a,
+    .footer_menu > .menu-item a {
+        color: #000;
+    }
+    .menu-item-home a {
+        color: #fff !important;
+    }
     .menu-item {
-        text-align: left;
-        padding-left: 3em;
-        background-color: rgba(51, 51, 51, 1);
+        padding-bottom: 1em;
+        background-color: #fff;
+        border-bottom: 1px solid #F0F0F0;
     }
-    
+    .menu-item .sub-menu a {
+        color: #58A4B0 !important;
+    }
+    .menu-item-home:hover {
+        padding-bottom: 0;
+    }
+    .menu-item-home .sub-menu {
+        background-color: #ECF7F8;
+    }
+    .menu-item-home .sub-menu a {
+        color: #58A4B0 !important;
+    }
     .menu-item-has-children > a::after {
         font-family: "Font Awesome 5 Free";
-        content: '\f055';
+        content: '\f0dd';
+        font-size: 1.5em;
         font-weight: bold;
         position: absolute;
+        margin-top: -10px;
         right: calc(100vw / 50 * 7);
     }
     
     .menu-item-has-children:active > a::after,
     .menu-item-has-children:hover > a::after {
-        content: '\f056';
+        content: '\f0d8';
     }
-
     .sub-menu {
         position: relative;
         max-height: 200px;
-        overflow-y: scroll;
-        background: rgb(170, 170, 170);
+    }
+    .sub-menu .menu-item {
+        text-align: center !important;
     }
     .sub-menu::-webkit-scrollbar {
         width: 10px;
     }
-    .sub-menu::-webkit-scrollbar-thumb {
-        background: rgba(255, 255, 255, 1);
-        border-radius: 3px;
-    }
-    .sub-menu .menu-item {
-        width: 100%;
-        background: rgb(170, 170, 170);
-        border-bottom: 1px solid rgb(255, 255, 255);
-    }
-
     .footer_menu {
         display: none;
+    }
+    .logo-img {
+        width: 186px;
+    }
+    .f-header {
+        height: 55px;
+    }
+    .current-menu-item .sub-menu .menu-item,
+    .sub-menu .menu-item {
+        background-color: transparent;
+    }
+    .current-menu-item a:hover, .current_page_item a:hover {
+        color: #58A4B0 !important;
+    }
+    .menu-item-home a:hover {
+        color: #fff !important;
+    }
+    .menu-item-home .sub-menu a:hover {
+        color: #58A4B0 !important;
+    }
+    .menu-item a {
+        margin-left: 10%;
+    }
+    .sub-menu .menu-item a {
+        margin-left: 0;
     }
 }
 
